--- a/style.css
+++ b/style.css
@@ -13,6 +13,24 @@ body {
 
 /* Einde Global */
 
+.hide {
+    display: none;
+    background-color: #DDC6B6;
+}
+.close {
+    display: none;
+    background-color: #DDC6B6;
+}
+.open {
+    transition: all 0.5s;
+    background-color: #DDC6B6;
+}
+#hamburgerMenu {
+    margin: auto;
+    left: 50%;
+    background-color: #DDC6B6;
+}
+
 nav {
     background-color: #DDC6B6;
     position: absolute;
@@ -39,6 +57,16 @@ li{
     font-size: 20px;
 }
 .nav-link:hover {
+    background-color: #262223;
+    color: #DDC6B6;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+}
+
+.nav-response-link {
+    font-size: 20px;
+}
+.nav-response-link:hover {
     background-color: #262223;
     color: #DDC6B6;
     transition: all 0.5s;
@@ -131,7 +159,6 @@ li{
 }
 .buttonSubmit {
     border-bottom: 2px solid #262223;
-
 }
 .buttonSubmit:hover
 {
