--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ li{
     padding: 15px;
 }
 .buttonSubmit {
+    background-color: #DDC6B6;
     border-bottom: 2px solid #262223;
 }
 .buttonSubmit:hover
@@ -199,6 +200,22 @@ li{
     color: #DDC6B6;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
+}
+.contactFormData {
+    background-color: #DDC6B6;
+    color:#262223;
+}
+.contactFormData:hover {
+    background-color: #262223;
+    color: #DDC6B6;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+}
+.contactFormData::placeholder {
+    color: #262223;
+}
+.contactFormData:hover::placeholder {
+    color: #DDC6B6;
 }
 
 @media
